--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^7.6.1",
     "react-scripts": "^5.0.1",
     "react-typed": "^2.0.12",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+      "concurrently": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
